# http_server_video

./: Cargo.toml  readme.md
src/: main.rs  state.rs
src/stream_handlers/: mod.rs  routes.rs
src/test_handlers/: mod.rs  routes.rs
src/utils/: custom_file.rs  mod.rs
