[package]
name = "http_server_video"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
async-stream = "0.3.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.0.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
bytes = "1.5.0"
reqwest = { version = "0.12.1", features = ["stream"] }
radix_trie = "0.2.1"
